--- a/purchase.html
+++ b/purchase.html
@@ -27,7 +27,19 @@
             <div class="index"></div>
             <div class="index"></div>
         </div>
-
+        <form action="#" method="post" name="purchase">
+            <div id="form_content_1">
+                <label>品名</label>
+                <input type="text" id="product_name" name="product_name">
+            </div>
+            <div id="form_content_2">
+                <label>數量</label>
+                <input type="text" id="quantity" name="quantity">
+            </div>
+            <div id="form_content_3">
+                <input type="submit" value="Submit" name="submit">
+            </div>
+        </form>
         <div class="bottom">
             <div id="bottom_about">
                 ABOUT
@@ -36,5 +48,6 @@
                 這裡要放地址
             </div>
         </div>
+        <script type="text/javascript" src="scripts/purchase.js"></script>
     </body>
 </html>
