--- a/purchase.html
+++ b/purchase.html
@@ -29,15 +29,17 @@
             <div class="index"></div>
         </div>
         <form action="#" method="post" name="purchase">
-            <div id="form_content_1">
-                <label>品名</label>
-                <select id="product_name" name="product_name">
-                    <option value="肉片">肉片</option>
-                </select>
-            </div>
-            <div id="form_content_2">
-                <label>數量</label>
-                <input type="text" id="quantity" name="quantity">
+            <div id="form_line_1">
+                <div id="form_content_1">
+                    <label>品名</label>
+                    <select id="product_name" name="product_name">
+                        <option value="肉片">肉片</option>
+                    </select>
+                </div>
+                <div id="form_content_2">
+                    <label>數量</label>
+                    <input type="text" id="quantity" name="quantity">
+                </div>
             </div>
             <div id="form_content_4">
                 <label>總價</label>
