add utf-8 encoding

--- a/introduction.html
+++ b/introduction.html
@@ -2,6 +2,7 @@
     <head>
         <title>介紹</title>
         <link href="introduction_style.css" rel="stylesheet">
+        <meta charset="utf-8">
     </head>
     <body>
         <div id="header">
