--- a/purchase.html
+++ b/purchase.html
@@ -3,6 +3,7 @@
         <title>購買</title>
         <link href="purchase_style.css" rel="stylesheet">
         <script src="jquery-3.6.3.js"></script>
+        <meta charset="utf-8">
     </head>
     <body>
         <div id="header">
