--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
         <title>禾田畜牧場</title>
         <link href="style.css" rel="stylesheet">
         <script src="jquery-3.6.3.js"></script>
+        <meta charset="utf-8">
     </head>
     <body>
         <div id="top"></div>
