--- a/purchase.html
+++ b/purchase.html
@@ -30,23 +30,29 @@
             <div class="index"></div>
         </div>
         <form action="#" method="post" name="purchase">
-            <div id="form_line_1">
-                <div id="form_content_1">
-                    <label>品名</label>
-                    <select id="product_name" name="product_name">
-                        <option value="肉片">肉片</option>
-                    </select>
-                </div>
-                <div id="form_content_2">
-                    <label>數量</label>
-                    <input type="text" id="quantity" name="quantity">
-                </div>
+            <div id="form_title">
+                <p>訂購表單</p>
             </div>
-            <div id="form_content_4">
-                <label>總價</label>
-                <input type="text "id="total" name="total" value="">
+            <div id="form_content_1">
+                <label id="sliced_meat_title">肉片</label>
+                <input type="text" id="sliced_meat" name="sliced_meat">
+                <!--<select id="product_name" name="product_name">
+                    <option value="肉片">肉片</option>
+                </select>-->
+            </div>
+            <div id="form_content_2">
+                <label id="item2_title">品項2</label>
+                <input type="text" id="item2" name="item2">
             </div>
             <div id="form_content_3">
+                <label id="item3_title">品項3</label>
+                <input type="text" id="item3" name="item3">
+            </div>
+            <div id="form_content_4">
+                <label id="total_title">總價</label>
+                <input type="text "id="total" name="total">
+            </div>
+            <div id="form_content_5">
                 <input type="button" id="submit" value="Submit" name="submit">
             </div>
         </form>
