change layout of puchase form(unfinished)

--- a/purchase.html
+++ b/purchase.html
@@ -33,27 +33,44 @@
             <div id="form_title">
                 <p>訂購表單</p>
             </div>
-            <div id="form_content_1">
-                <label id="sliced_meat_title">肉片</label>
-                <input type="text" id="sliced_meat" name="sliced_meat">
+            <div id="email">
+                <label id="email_label">電子郵件</label>
+                <input type="text" id="email_input" name="email">
+            </div>
+            <div id="name">
+                <label id="name_label">訂購人姓名</label>
+                <input type="text" id="name_input" name="name">
+            </div>
+            <div id="contact">
+                <label id="contact_label">聯絡方式(手機、LINE ID、IG 擇一)</label>
+                <input type="text" id="contact_input" name="contact">
+            </div>
+            <div id="address">
+                <label id="address_label">配送地址(請提供完整的收件地址、收貨人姓名、電話)</label>
+                <input type="text" id="address_input" name="address">
+            </div>
+
+            <div id="H1">
+                <label id="H1_label">H1 嫩肩羊肉片~火鍋薄片(150克/包) $300</label>
+                <input type="text" id="H1_input" name="H1">
                 <!--<select id="product_name" name="product_name">
                     <option value="肉片">肉片</option>
                 </select>-->
             </div>
-            <div id="form_content_2">
-                <label id="item2_title">品項2</label>
-                <input type="text" id="item2" name="item2">
+            <div id="H2">
+                <label id="H2_label">品項2</label>
+                <input type="text" id="H2_input" name="item2">
             </div>
-            <div id="form_content_3">
-                <label id="item3_title">品項3</label>
-                <input type="text" id="item3" name="item3">
+            <div id="H3">
+                <label id="H3_label">品項3</label>
+                <input type="text" id="H3_input" name="item3">
             </div>
-            <div id="form_content_4">
-                <label id="total_title">總價</label>
-                <input type="text "id="total" name="total">
+            <div id="total">
+                <label id="total_label">總價</label>
+                <input type="text "id="total_input" name="total">
             </div>
-            <div id="form_content_5">
-                <input type="button" id="submit" value="Submit" name="submit">
+            <div id="submit">
+                <input type="button" id="submit_button" value="Submit" name="submit">
             </div>
         </form>
         <div class="bottom">
