change layout of purchase and add introduction contents

--- a/index.html
+++ b/index.html
@@ -38,7 +38,10 @@
                 <img src="asset/logo.jpg" height="600px">
             </div>
             <div id="about_us_content_3">
-                這邊要放介紹的節錄
+                <p class="paragraph">
+                    『禾田畜牧場』一個位於嘉義縣西部農村平原的牧場，成立於102年3月。經營者從小就是父親的得力助手，無論是在【農作】、【養殖】甚至是【畜牧~養豬】各方面，他都一聽就懂、一學就會，也因此減輕父親的家庭重擔。
+                成家立業後，經營者原本只承接父親的家庭事業，一段時間後，因為自我的精進與創新管理方式，慢慢的規模比父親原有的更大、成效也更好。
+                </p>
             </div>
             <div id="about_us_content_4">
                 <a href="introduction.html">
