--- a/introduction.html
+++ b/introduction.html
@@ -32,6 +32,37 @@
             <div id="introduction_content_1">
                 我們的故事
             </div>
+            <div id="introduction_content_2">
+                    ■畜牧場簡介<br>
+                    <p class="paragraph">
+                        『禾田畜牧場』一個位於嘉義縣西部農村平原的牧場，成立於102年3月。經營者從小就是父親的得力助手，無論是在【農作】、【養殖】甚至是【畜牧~養豬】各方面，他都一聽就懂、一學就會，也因此減輕父親的家庭重擔。
+                    </p>
+                    <p class="paragraph">
+                            成家立業後，經營者原本只承接父親的家庭事業，一段時間後，因為自我的精進與創新管理方式，慢慢的規模比父親原有的更大、成效也更好。
+                        然而，時代在變人不得不跟著改變，因氣候變遷的關係，養殖業的環境景氣愈來愈差。因緣際會下，經營者接觸到同屬於畜牧業的【養羊】訊息，經由好友與前輩的帶領提攜。想想：從小就知道【羊肉】是父親的最愛!【養羊】同時也能提供安全無毒的【羊肉】給父親享用，經營者便毅然決然地投入養羊的行列。
+                        一直以來，經營者在從事工作的態度上就有一個觀念：『要做就做到最好！』，因此，在興建牧場房舍的格局與房舍內的動向前，可說是四處奔走、請益與觀摩，最終興建出獨特的羊舍建築(既通風、無臭味、少濕氣)。<br>
+                    </p>
+                    <br>
+                    ■飼養特色<br>
+                    <p class="paragraph">
+                            『禾田畜牧場』在飼養方面有別於其他牧場的特色：<br>
+                        (一)	挑高建築：羊床距離地面足足有一層樓高，讓羊兒的生長環境既乾淨又舒爽。<br>
+                        (二)	空氣流通：採高床設計、四周無遮蔽物，空氣對流性佳，酷熱的夏天也不悶熱，提供羊兒舒適的環境。<br>
+                        (三)	專業管理：整場羊兒，從出生、教槽到販售，資料建檔並隨時更新。<br>
+                        (四)	安全飼養：飼養物強調無毒、無汙染且幾近天然食物，除購買安全品牌的精料與苜蓿外，廣泛種植無農藥的【天然牧草】，作為牧場的飼養物。<br>
+                        (五)	選種繁殖：透過經驗與飼養管理的過程中，挑選最佳的羊當種羊，進行配種與繁殖，讓羊兒的成長與肉質最佳化。<br>
+                        (六)	規格分類：依照羊兒體型大小進行分類、分欄槽，避免發生較大型的羊隻欺凌體型較小的羊隻，減緩羊隻緊張不安的情緒，提升肉質的甜美度。<br>
+                    </p>
+                    <br>
+                    ■經營者理念<br>
+                    <p class="paragraph">
+                            來自純樸且抱持著『堅持做到最好』的農家子弟，經營者有著他既簡單又堅持的理念：<br>
+                        (一)	堅持【乾淨舒適】的養羊環境<br>
+                        (二)	堅持【安全無毒】的飼養方式<br>
+                        (三)	堅持【童叟無欺】的信賴交易<br>
+                        (四)	堅持【永續發展】的經營模式<br>
+                    </p>
+            </div>
         </div>
 
         <div class="bottom">
