--- a/purchase.html
+++ b/purchase.html
@@ -52,18 +52,118 @@
 
             <div id="H1">
                 <label id="H1_label">H1 嫩肩羊肉片~火鍋薄片(150克/包) $300</label>
-                <input type="text" id="H1_input" name="H1">
+                <select id="H1_select" name="H1">
+                    <option value="0">0</option>
+                    <option value="1">1</option>
+                    <option value="2">2</option>
+                    <option value="3">3</option>
+                    <option value="4">4</option>
+                    <option value="5">5</option>
+                    <option value="6">6</option>
+                    <option value="7">7</option>
+                    <option value="8">8</option>
+                    <option value="9">9</option>
+                    <option value="10">10</option>
+                </select>
                 <!--<select id="product_name" name="product_name">
                     <option value="肉片">肉片</option>
                 </select>-->
             </div>
             <div id="H2">
-                <label id="H2_label">品項2</label>
-                <input type="text" id="H2_input" name="item2">
+                <label id="H2_label">H2 嫩肩羊肉塊~帶皮(500克/包) $720</label>
+                <select id="H2_select" name="H1">
+                    <option value="0">0</option>
+                    <option value="1">1</option>
+                    <option value="2">2</option>
+                    <option value="3">3</option>
+                    <option value="4">4</option>
+                    <option value="5">5</option>
+                    <option value="6">6</option>
+                    <option value="7">7</option>
+                    <option value="8">8</option>
+                    <option value="9">9</option>
+                    <option value="10">10</option>
+                </select>
             </div>
             <div id="H3">
-                <label id="H3_label">品項3</label>
-                <input type="text" id="H3_input" name="item3">
+                <label id="H3_label">H3 五花羊肉塊~帶皮(500克/包) $720</label>
+                <select id="H3_select" name="H1">
+                    <option value="0">0</option>
+                    <option value="1">1</option>
+                    <option value="2">2</option>
+                    <option value="3">3</option>
+                    <option value="4">4</option>
+                    <option value="5">5</option>
+                    <option value="6">6</option>
+                    <option value="7">7</option>
+                    <option value="8">8</option>
+                    <option value="9">9</option>
+                    <option value="10">10</option>
+                </select>
+            </div>
+            <div id="H4">
+                <label id="H4_label">H4 五花羊肉片(150克/包) $280</label>
+                <select id="H4_select" name="H1">
+                    <option value="0">0</option>
+                    <option value="1">1</option>
+                    <option value="2">2</option>
+                    <option value="3">3</option>
+                    <option value="4">4</option>
+                    <option value="5">5</option>
+                    <option value="6">6</option>
+                    <option value="7">7</option>
+                    <option value="8">8</option>
+                    <option value="9">9</option>
+                    <option value="10">10</option>
+                </select>
+            </div>
+            <div id="H5">
+                <label id="H5_label">H5 羊頸肉塊~帶皮(500克/包) $900</label>
+                <select id="H5_select" name="H1">
+                    <option value="0">0</option>
+                    <option value="1">1</option>
+                    <option value="2">2</option>
+                    <option value="3">3</option>
+                    <option value="4">4</option>
+                    <option value="5">5</option>
+                    <option value="6">6</option>
+                    <option value="7">7</option>
+                    <option value="8">8</option>
+                    <option value="9">9</option>
+                    <option value="10">10</option>
+                </select>
+            </div>
+            <div id="H6">
+                <label id="H6_label">H6羊排骨(600克/包) $360</label>
+                <select id="H6_select" name="H1">
+                    <option value="0">0</option>
+                    <option value="1">1</option>
+                    <option value="2">2</option>
+                    <option value="3">3</option>
+                    <option value="4">4</option>
+                    <option value="5">5</option>
+                    <option value="6">6</option>
+                    <option value="7">7</option>
+                    <option value="8">8</option>
+                    <option value="9">9</option>
+                    <option value="10">10</option>
+                </select>
+            </div>
+            <div id="H7">
+                <label id="H7_label">H7羊大骨(250克/包) $120</label>
+                <select id="H7_select" name="H1">
+                    <option value="0">0</option>
+                    <option value="1">1</option>
+                    <option value="2">2</option>
+                    <option value="3">3</option>
+                    <option value="4">4</option>
+                    <option value="5">5</option>
+                    <option value="6">6</option>
+                    <option value="7">7</option>
+                    <option value="8">8</option>
+                    <option value="9">9</option>
+                    <option value="10">10</option>
+                </select>
             </div>
             <div id="total">
                 <label id="total_label">總價</label>
