fix layout of introduction words

--- a/introduction.html
+++ b/introduction.html
@@ -38,8 +38,10 @@
                         『禾田畜牧場』一個位於嘉義縣西部農村平原的牧場，成立於102年3月。經營者從小就是父親的得力助手，無論是在【農作】、【養殖】甚至是【畜牧~養豬】各方面，他都一聽就懂、一學就會，也因此減輕父親的家庭重擔。
                     </p>
                     <p class="paragraph">
-                            成家立業後，經營者原本只承接父親的家庭事業，一段時間後，因為自我的精進與創新管理方式，慢慢的規模比父親原有的更大、成效也更好。
-                        然而，時代在變人不得不跟著改變，因氣候變遷的關係，養殖業的環境景氣愈來愈差。因緣際會下，經營者接觸到同屬於畜牧業的【養羊】訊息，經由好友與前輩的帶領提攜。想想：從小就知道【羊肉】是父親的最愛!【養羊】同時也能提供安全無毒的【羊肉】給父親享用，經營者便毅然決然地投入養羊的行列。
+                        成家立業後，經營者原本只承接父親的家庭事業，一段時間後，因為自我的精進與創新管理方式，慢慢的規模比父親原有的更大、成效也更好。
+                    </p>
+                    <p class="paragraph">
+                            然而，時代在變人不得不跟著改變，因氣候變遷的關係，養殖業的環境景氣愈來愈差。因緣際會下，經營者接觸到同屬於畜牧業的【養羊】訊息，經由好友與前輩的帶領提攜。想想：從小就知道【羊肉】是父親的最愛!【養羊】同時也能提供安全無毒的【羊肉】給父親享用，經營者便毅然決然地投入養羊的行列。
                         一直以來，經營者在從事工作的態度上就有一個觀念：『要做就做到最好！』，因此，在興建牧場房舍的格局與房舍內的動向前，可說是四處奔走、請益與觀摩，最終興建出獨特的羊舍建築(既通風、無臭味、少濕氣)。<br>
                     </p>
                     <br>
