change font-size of introduction in main page, add slide animation

--- a/index.html
+++ b/index.html
@@ -35,7 +35,18 @@
                 關於我們
             </div>
             <div id="about_us_content_2">
-                <img src="asset/logo.jpg" height="600px">
+                <div>
+                    <img src="asset/logo.jpg" height="600px">
+                </div>
+                <div>
+                    <img src="asset/eat_grass.jpg" height="600px">
+                </div>
+                <div>
+                    <img src="asset/eat_grass_2.jpg" height="600px">
+                </div>
+                <div>
+                    <img src="asset/red_hair.jpeg" height="600px">
+                </div>
             </div>
             <div id="about_us_content_3">
                 <p class="paragraph">
