fix layout on different devices

--- a/purchase.html
+++ b/purchase.html
@@ -29,156 +29,158 @@
             <div class="index"></div>
             <div class="index"></div>
         </div>
-        <form action="#" method="post" name="purchase">
-            <div id="form_title">
-                <p>訂購表單</p>
-            </div>
-            <div id="email">
-                <label id="email_label">電子郵件</label>
-                <input type="text" id="email_input" name="email">
-            </div>
-            <div id="name">
-                <label id="name_label">訂購人姓名</label>
-                <input type="text" id="name_input" name="name">
-            </div>
-            <div id="contact">
-                <label id="contact_label">聯絡方式(手機、LINE ID、IG 擇一)</label>
-                <input type="text" id="contact_input" name="contact">
-            </div>
-            <div id="address">
-                <label id="address_label">配送地址(請提供完整的收件地址、收貨人姓名、電話)</label>
-                <input type="text" id="address_input" name="address">
-            </div>
-
-            <div id="H1">
-                <label id="H1_label">H1 嫩肩羊肉片~火鍋薄片(150克/包) $300</label>
-                <select id="H1_select" name="H1">
-                    <option value="0">0</option>
-                    <option value="1">1</option>
-                    <option value="2">2</option>
-                    <option value="3">3</option>
-                    <option value="4">4</option>
-                    <option value="5">5</option>
-                    <option value="6">6</option>
-                    <option value="7">7</option>
-                    <option value="8">8</option>
-                    <option value="9">9</option>
-                    <option value="10">10</option>
-                </select>
-                <!--<select id="product_name" name="product_name">
-                    <option value="肉片">肉片</option>
-                </select>-->
-            </div>
-            <div id="H2">
-                <label id="H2_label">H2 嫩肩羊肉塊~帶皮(500克/包) $720</label>
-                <select id="H2_select" name="H2">
-                    <option value="0">0</option>
-                    <option value="1">1</option>
-                    <option value="2">2</option>
-                    <option value="3">3</option>
-                    <option value="4">4</option>
-                    <option value="5">5</option>
-                    <option value="6">6</option>
-                    <option value="7">7</option>
-                    <option value="8">8</option>
-                    <option value="9">9</option>
-                    <option value="10">10</option>
-                </select>
-            </div>
-            <div id="H3">
-                <label id="H3_label">H3 五花羊肉塊~帶皮(500克/包) $720</label>
-                <select id="H3_select" name="H3">
-                    <option value="0">0</option>
-                    <option value="1">1</option>
-                    <option value="2">2</option>
-                    <option value="3">3</option>
-                    <option value="4">4</option>
-                    <option value="5">5</option>
-                    <option value="6">6</option>
-                    <option value="7">7</option>
-                    <option value="8">8</option>
-                    <option value="9">9</option>
-                    <option value="10">10</option>
-                </select>
-            </div>
-            <div id="H4">
-                <label id="H4_label">H4 五花羊肉片(150克/包) $280</label>
-                <select id="H4_select" name="H4">
-                    <option value="0">0</option>
-                    <option value="1">1</option>
-                    <option value="2">2</option>
-                    <option value="3">3</option>
-                    <option value="4">4</option>
-                    <option value="5">5</option>
-                    <option value="6">6</option>
-                    <option value="7">7</option>
-                    <option value="8">8</option>
-                    <option value="9">9</option>
-                    <option value="10">10</option>
-                </select>
-            </div>
-            <div id="H5">
-                <label id="H5_label">H5 羊頸肉塊~帶皮(500克/包) $900</label>
-                <select id="H5_select" name="H5">
-                    <option value="0">0</option>
-                    <option value="1">1</option>
-                    <option value="2">2</option>
-                    <option value="3">3</option>
-                    <option value="4">4</option>
-                    <option value="5">5</option>
-                    <option value="6">6</option>
-                    <option value="7">7</option>
-                    <option value="8">8</option>
-                    <option value="9">9</option>
-                    <option value="10">10</option>
-                </select>
-            </div>
-            <div id="H6">
-                <label id="H6_label">H6羊排骨(600克/包) $360</label>
-                <select id="H6_select" name="H6">
-                    <option value="0">0</option>
-                    <option value="1">1</option>
-                    <option value="2">2</option>
-                    <option value="3">3</option>
-                    <option value="4">4</option>
-                    <option value="5">5</option>
-                    <option value="6">6</option>
-                    <option value="7">7</option>
-                    <option value="8">8</option>
-                    <option value="9">9</option>
-                    <option value="10">10</option>
-                </select>
-            </div>
-            <div id="H7">
-                <label id="H7_label">H7羊大骨(250克/包) $120</label>
-                <select id="H7_select" name="H7">
-                    <option value="0">0</option>
-                    <option value="1">1</option>
-                    <option value="2">2</option>
-                    <option value="3">3</option>
-                    <option value="4">4</option>
-                    <option value="5">5</option>
-                    <option value="6">6</option>
-                    <option value="7">7</option>
-                    <option value="8">8</option>
-                    <option value="9">9</option>
-                    <option value="10">10</option>
-                </select>
-            </div>
-            <div id="total">
-                <label id="total_label">總價</label>
-                <input type="text "id="total_input" name="total">
-            </div>
-            <div id="submit">
-                <input type="button" id="submit_button" value="Submit" name="submit">
-            </div>
-        </form>
-        <div class="bottom">
-            <div id="bottom_about">
-                ABOUT
-            </div>
-            <div id="bottom_content">
-                這裡要放地址
+        <div id="purchase">
+            <form action="#" method="post" name="purchase">
+                <div id="form_title">
+                    <p>訂購表單</p>
+                </div>
+                <div id="email">
+                    <label id="email_label">電子郵件</label>
+                    <input type="text" id="email_input" name="email">
+                </div>
+                <div id="name">
+                    <label id="name_label">訂購人姓名</label>
+                    <input type="text" id="name_input" name="name">
+                </div>
+                <div id="contact">
+                    <label id="contact_label">聯絡方式(手機、LINE ID、IG 擇一)</label>
+                    <input type="text" id="contact_input" name="contact">
+                </div>
+                <div id="address">
+                    <label id="address_label">配送地址(請提供完整的收件地址、收貨人姓名、電話)</label>
+                    <input type="text" id="address_input" name="address">
+                </div>
+    
+                <div id="H1">
+                    <label id="H1_label">H1 嫩肩羊肉片~火鍋薄片(150克/包) $300</label>
+                    <select id="H1_select" name="H1">
+                        <option value="0">0</option>
+                        <option value="1">1</option>
+                        <option value="2">2</option>
+                        <option value="3">3</option>
+                        <option value="4">4</option>
+                        <option value="5">5</option>
+                        <option value="6">6</option>
+                        <option value="7">7</option>
+                        <option value="8">8</option>
+                        <option value="9">9</option>
+                        <option value="10">10</option>
+                    </select>
+                    <!--<select id="product_name" name="product_name">
+                        <option value="肉片">肉片</option>
+                    </select>-->
+                </div>
+                <div id="H2">
+                    <label id="H2_label">H2 嫩肩羊肉塊~帶皮(500克/包) $720</label>
+                    <select id="H2_select" name="H2">
+                        <option value="0">0</option>
+                        <option value="1">1</option>
+                        <option value="2">2</option>
+                        <option value="3">3</option>
+                        <option value="4">4</option>
+                        <option value="5">5</option>
+                        <option value="6">6</option>
+                        <option value="7">7</option>
+                        <option value="8">8</option>
+                        <option value="9">9</option>
+                        <option value="10">10</option>
+                    </select>
+                </div>
+                <div id="H3">
+                    <label id="H3_label">H3 五花羊肉塊~帶皮(500克/包) $720</label>
+                    <select id="H3_select" name="H3">
+                        <option value="0">0</option>
+                        <option value="1">1</option>
+                        <option value="2">2</option>
+                        <option value="3">3</option>
+                        <option value="4">4</option>
+                        <option value="5">5</option>
+                        <option value="6">6</option>
+                        <option value="7">7</option>
+                        <option value="8">8</option>
+                        <option value="9">9</option>
+                        <option value="10">10</option>
+                    </select>
+                </div>
+                <div id="H4">
+                    <label id="H4_label">H4 五花羊肉片(150克/包) $280</label>
+                    <select id="H4_select" name="H4">
+                        <option value="0">0</option>
+                        <option value="1">1</option>
+                        <option value="2">2</option>
+                        <option value="3">3</option>
+                        <option value="4">4</option>
+                        <option value="5">5</option>
+                        <option value="6">6</option>
+                        <option value="7">7</option>
+                        <option value="8">8</option>
+                        <option value="9">9</option>
+                        <option value="10">10</option>
+                    </select>
+                </div>
+                <div id="H5">
+                    <label id="H5_label">H5 羊頸肉塊~帶皮(500克/包) $900</label>
+                    <select id="H5_select" name="H5">
+                        <option value="0">0</option>
+                        <option value="1">1</option>
+                        <option value="2">2</option>
+                        <option value="3">3</option>
+                        <option value="4">4</option>
+                        <option value="5">5</option>
+                        <option value="6">6</option>
+                        <option value="7">7</option>
+                        <option value="8">8</option>
+                        <option value="9">9</option>
+                        <option value="10">10</option>
+                    </select>
+                </div>
+                <div id="H6">
+                    <label id="H6_label">H6羊排骨(600克/包) $360</label>
+                    <select id="H6_select" name="H6">
+                        <option value="0">0</option>
+                        <option value="1">1</option>
+                        <option value="2">2</option>
+                        <option value="3">3</option>
+                        <option value="4">4</option>
+                        <option value="5">5</option>
+                        <option value="6">6</option>
+                        <option value="7">7</option>
+                        <option value="8">8</option>
+                        <option value="9">9</option>
+                        <option value="10">10</option>
+                    </select>
+                </div>
+                <div id="H7">
+                    <label id="H7_label">H7羊大骨(250克/包) $120</label>
+                    <select id="H7_select" name="H7">
+                        <option value="0">0</option>
+                        <option value="1">1</option>
+                        <option value="2">2</option>
+                        <option value="3">3</option>
+                        <option value="4">4</option>
+                        <option value="5">5</option>
+                        <option value="6">6</option>
+                        <option value="7">7</option>
+                        <option value="8">8</option>
+                        <option value="9">9</option>
+                        <option value="10">10</option>
+                    </select>
+                </div>
+                <div id="total">
+                    <label id="total_label">總價</label>
+                    <input type="text "id="total_input" name="total">
+                </div>
+                <div id="submit">
+                    <input type="button" id="submit_button" value="Submit" name="submit">
+                </div>
+            </form>
+            <div class="bottom">
+                <div id="bottom_about">
+                    ABOUT
+                </div>
+                <div id="bottom_content">
+                    這裡要放地址
+                </div>
             </div>
         </div>
         <script type="text/javascript" src="scripts/purchase.js"></script>
