--- a/index.html
+++ b/index.html
@@ -36,16 +36,16 @@
             </div>
             <div id="about_us_content_2">
                 <div>
-                    <img src="asset/logo.jpg" height="600px">
+                    <img src="asset/logo.jpg">
                 </div>
                 <div>
-                    <img src="asset/eat_grass.jpg" height="600px">
+                    <img src="asset/eat_grass.jpg">
                 </div>
                 <div>
-                    <img src="asset/eat_grass_2.jpg" height="600px">
+                    <img src="asset/eat_grass_2.jpg">
                 </div>
                 <div>
-                    <img src="asset/red_hair.jpeg" height="600px">
+                    <img src="asset/red_hair.jpeg">
                 </div>
             </div>
             <div id="about_us_content_3">
@@ -59,13 +59,13 @@
                     <button class="button">瞭解更多</button>
                 </a>
             </div>
-        </div>
-        <div class="bottom">
-            <div id="bottom_about">
-                ABOUT
-            </div>
-            <div id="bottom_content">
-                這裡要放地址
+            <div class="bottom">
+                <div id="bottom_about">
+                    ABOUT
+                </div>
+                <div id="bottom_content">
+                    這裡要放地址
+                </div>
             </div>
         </div>
         <script type="text/javascript" src="scripts/main.js"></script>
