--- a/purchase.html
+++ b/purchase.html
@@ -22,7 +22,7 @@
                 <a href="purchase.html">購買</a>
             </div>
             <div class="index">
-                
+                <a href="share.html">分享</a>
             </div>
             <div class="index"></div>
             <div class="index"></div>
