add link to GFA and add scroll animation to introduction, purchase, and share

--- a/index.html
+++ b/index.html
@@ -66,6 +66,9 @@
                 <div id="bottom_content">
                     這裡要放地址
                 </div>
+                <a href="https://www.goat.org.tw/" target="_blank">
+                    <img id="gfa_logo" src="asset/gfa_logo.png">
+                </a>
             </div>
         </div>
         <script type="text/javascript" src="scripts/main.js"></script>
