--- a/purchase.html
+++ b/purchase.html
@@ -19,7 +19,7 @@
                 <a href="introduction.html">介紹</a>
             </div>
             <div class="index">
-                <a href="purchase.html">購買</a>
+                <a href="purchase.html" id="index_purchase">購買</a>
             </div>
             <div class="index">
                 <a href="share.html">分享</a>
@@ -181,6 +181,9 @@
                 <div id="bottom_content">
                     這裡要放地址
                 </div>
+                <a href="https://www.goat.org.tw/" target="_blank">
+                    <img id="gfa_logo" src="asset/gfa_logo.png">
+                </a>
             </div>
         </div>
         <script type="text/javascript" src="scripts/purchase.js"></script>
