--- a/introduction.html
+++ b/introduction.html
@@ -2,6 +2,7 @@
     <head>
         <title>介紹</title>
         <link href="introduction_style.css" rel="stylesheet">
+        <script src="jquery-3.6.3.js"></script>
         <meta charset="utf-8">
     </head>
     <body>
@@ -15,7 +16,7 @@
                 <p>禾田畜牧場</p>
             </div>
             <div class="index">
-                <a href="introduction.html">介紹</a>
+                <a href="introduction.html" id="index_introduction">介紹</a>
             </div>
             <div class="index">
                 <a href="purchase.html">購買</a>
@@ -72,7 +73,11 @@
                 <div id="bottom_content">
                     這裡要放地址
                 </div>
+                <a href="https://www.goat.org.tw/" target="_blank">
+                    <img id="gfa_logo" src="asset/gfa_logo.png">
+                </a>
             </div>
         </div>
+        <script type="text/javascript" src="scripts/introduction.js"></script>
     </body>
 </html>
