--- a/share.html
+++ b/share.html
@@ -8,7 +8,7 @@
     <body>
         <div id="header">
             <div class="icon">
-                <a href="#top">
+                <a href="index.html">
                     <img src="asset/logo.jpg" id="icon" width="50px">
                 </a>
             </div>
@@ -22,7 +22,7 @@
                 <a href="purchase.html">購買</a>
             </div>
             <div class="index">
-                <a href="share.html">分享</a>
+                <a href="share.html" id="index_share">分享</a>
             </div>
             <div class="index"></div>
             <div class="index"></div>
@@ -31,11 +31,11 @@
         </div>
         <div id="share">
             <div id="media">
-                <video controls id="video_1">
+                <video id="video_1" controls controlsList="nodownload" oncontextmenu="return(false)">
                     <source src="asset/9046141262942.mp4">
                 </video>
                 <!-- <p id="video_1">ahouhiuoh</p> -->
-                <video controls id="video_2">
+                <video id="video_2" controls controlsList="nodownload" oncontextmenu="return(false)">
                     <source src="asset/aerial_movie.mp4">
                 </video>
             </div>
@@ -46,7 +46,11 @@
                 <div id="bottom_content">
                     這裡要放地址
                 </div>
+                <a href="https://www.goat.org.tw/" target="_blank">
+                    <img id="gfa_logo" src="asset/gfa_logo.png">
+                </a>
             </div>
         </div>
+        <script type="text/javascript" src="scripts/share.js"></script>
     </body>
 </html>
