--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
     <head>
         <title>禾田畜牧場</title>
@@ -10,7 +11,7 @@
         <div id="header">
             <div class="icon">
                 <a href="#top">
-                    <img src="asset/logo.jpg" id="icon" width="50px">
+                    <img src="asset/logo.jpg" id="icon">
                 </a>
             </div>
             <div class="index">
