--- a/purchase.html
+++ b/purchase.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
     <head>
         <title>購買</title>
@@ -9,7 +10,7 @@
         <div id="header">
             <div class="icon">
                 <a href="index.html">
-                    <img src="asset/logo.jpg" id="icon" width="50px">
+                    <img src="asset/logo.jpg" id="icon">
                 </a>
             </div>
             <div class="index">
